# Tetris-Land

./: .gitignore  CMakeLists.txt  README.md  main.c  main.h
docs/: video.mov
src/: bric.c  main.c
src/include/: constants.h
